--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -6,20 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".GameActivity">
 
-    <GridView
-        android:id="@+id/gridViewFront"
-        android:layout_width="294dp"
-        android:layout_height="390dp"
-        android:columnWidth="49dp"
-        android:numColumns="6"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.498">
-    </GridView>
-
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="560dp"
@@ -142,5 +128,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
+    <GridView
+        android:id="@+id/gridViewFront"
+        android:layout_width="294dp"
+        android:layout_height="390dp"
+        android:columnWidth="49dp"
+        android:numColumns="6"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.498"></GridView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
