--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Button xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/button"
-    android:layout_width="39dip"
-    android:layout_height="45dip"
+    android:layout_width="40dip"
+    android:layout_height="40dip"
+    android:background="@color/teal_200"
+    android:textColor="@color/white"
     android:textSize="10sp"
-    android:background="@android:color/holo_blue_light"
-    android:textColor="@android:color/black"
     android:textStyle="bold" />
