--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -142,4 +142,55 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.45"></GridView>
 
+    <LinearLayout
+        android:layout_width="48dp"
+        android:layout_height="500dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.988"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <Button
+            android:id="@+id/tower1"
+            android:layout_width="match_parent"
+            android:layout_height="65dp"
+            android:paddingHorizontal="0dp"
+            android:paddingVertical="0dp"
+            android:text="T1" />
+
+        <Button
+            android:id="@+id/tower2"
+            android:layout_width="match_parent"
+            android:layout_height="62dp"
+            android:paddingHorizontal="0dp"
+            android:paddingVertical="0dp"
+            android:text="T2" />
+
+        <Button
+            android:id="@+id/tower3"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:paddingHorizontal="0dp"
+            android:paddingVertical="0dp"
+            android:text="T3" />
+
+        <Button
+            android:id="@+id/tower4"
+            android:layout_width="match_parent"
+            android:layout_height="59dp"
+            android:paddingHorizontal="0dp"
+            android:paddingVertical="0dp"
+            android:text="T4" />
+
+        <Button
+            android:id="@+id/tower5"
+            android:layout_width="match_parent"
+            android:layout_height="62dp"
+            android:paddingHorizontal="0dp"
+            android:paddingVertical="0dp"
+            android:text="T5" />
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
